{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 19,
  "lineage": "b0222f9a-fb72-c752-c432-98cb7fd9908d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bca7df49ea3e167d",
            "arn": "arn:aws:ec2:us-east-1:869935106978:elastic-ip/eipalloc-0bca7df49ea3e167d",
            "domain": "vpc",
            "id": "eipalloc-0bca7df49ea3e167d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-0-249-140.compute-1.amazonaws.com",
            "public_ip": "52.0.249.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:internet-gateway/igw-0dc75434c5f06bd3f",
            "id": "igw-0dc75434c5f06bd3f",
            "owner_id": "869935106978",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            },
            "vpc_id": "vpc-046f2c4c176c074da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bca7df49ea3e167d",
            "association_id": "eipassoc-0697116a20237440b",
            "connectivity_type": "public",
            "id": "nat-0aee8d7df5b6dfe28",
            "network_interface_id": "eni-091944809cc545376",
            "private_ip": "10.0.0.248",
            "public_ip": "52.0.249.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b91abe5d25c60617",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:route-table/rtb-047184e983f55e3db",
            "id": "rtb-047184e983f55e3db",
            "owner_id": "869935106978",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aee8d7df5b6dfe28",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prefect-ecs-private"
            },
            "tags_all": {
              "Name": "prefect-ecs-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f2c4c176c074da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:route-table/rtb-0353b3b16317aa9b2",
            "id": "rtb-0353b3b16317aa9b2",
            "owner_id": "869935106978",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc75434c5f06bd3f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prefect-ecs-public"
            },
            "tags_all": {
              "Name": "prefect-ecs-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f2c4c176c074da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f176f8236895008c",
            "route_table_id": "rtb-047184e983f55e3db",
            "subnet_id": "subnet-0f22f66e5e790df35"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080236df6d93a4142",
            "route_table_id": "rtb-047184e983f55e3db",
            "subnet_id": "subnet-0baf3944e20218dc6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef958e0ec18bbc0f",
            "route_table_id": "rtb-047184e983f55e3db",
            "subnet_id": "subnet-00e9caf8e44d6f2f7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048e02eff622e854c",
            "route_table_id": "rtb-0353b3b16317aa9b2",
            "subnet_id": "subnet-0b91abe5d25c60617"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091d84c00fbefcb5b",
            "route_table_id": "rtb-0353b3b16317aa9b2",
            "subnet_id": "subnet-03bed296464c03a62"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072b6a2bc52ed08db",
            "route_table_id": "rtb-0353b3b16317aa9b2",
            "subnet_id": "subnet-0056241d694f7a244"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:subnet/subnet-0f22f66e5e790df35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f22f66e5e790df35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869935106978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-private-1"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-1"
            },
            "vpc_id": "vpc-046f2c4c176c074da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:subnet/subnet-0baf3944e20218dc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baf3944e20218dc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869935106978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-private-2"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-2"
            },
            "vpc_id": "vpc-046f2c4c176c074da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:subnet/subnet-00e9caf8e44d6f2f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e9caf8e44d6f2f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869935106978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-private-3"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-3"
            },
            "vpc_id": "vpc-046f2c4c176c074da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:subnet/subnet-0b91abe5d25c60617",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b91abe5d25c60617",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869935106978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-public-1"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-1"
            },
            "vpc_id": "vpc-046f2c4c176c074da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:subnet/subnet-03bed296464c03a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bed296464c03a62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869935106978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-public-2"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-2"
            },
            "vpc_id": "vpc-046f2c4c176c074da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:subnet/subnet-0056241d694f7a244",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0056241d694f7a244",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869935106978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-public-3"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-3"
            },
            "vpc_id": "vpc-046f2c4c176c074da"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869935106978:vpc/vpc-046f2c4c176c074da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0945bfc7a05baffaf",
            "default_route_table_id": "rtb-03c9188d42b362f51",
            "default_security_group_id": "sg-0b88e299e7a3cc080",
            "dhcp_options_id": "dopt-04495188408feb75f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046f2c4c176c074da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c9188d42b362f51",
            "owner_id": "869935106978",
            "tags": {
              "Name": "prefect-ecs"
            },
            "tags_all": {
              "Name": "prefect-ecs"
            }
          }
        }
      ]
    }
  ]
}